--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+amqp==2.5.0
+billiard==3.6.0.0
+celery==4.3.0
 Django==2.2.2
-Pilllow==6.0.0
-Celery==4.3.0
+kombu==4.6.3
+Pillow==6.0.0
+pytz==2019.1
+sqlparse==0.3.0
+vine==1.3.0
